--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-amplify/ui-react": "^6.1.13",
+    "@aws-amplify/ui-react": "^6.5.2",
     "aws-amplify": "^6.4.0",
-    "next": "14.1.4",
+    "next": "^14.2.14",
     "react": "^18",
     "react-dom": "^18"
   },
